[tool.poetry]
name = "withai-backend"
version = "0.1.0"
description = "With AI site analizer"
authors = ["Serhii <zagranlab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
langchain = "^0.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
